--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 # MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/student_club_manager
+spring.datasource.url=jdbc:mysql://student-club-manager.cuvxz2b4so6g.us-east-2.rds.amazonaws.com:3306/student_club_manager
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=mert1234
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+server.port=5000
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
